--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Omrails</title>
+    <title>Rails learning application</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <%= link_to 'home', root_path%> 
+<%# this reads from the routes file to check where to point too %>
+    <%= link_to 'about', about_path%>
+    <%= link_to 'contact', contact_path%>
+    <%# the navbar is loaded here so I dont have to add it to each page individually %>
     <%= yield %>
   </body>
 </html>
