--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rails learning application</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>One Month Rails Project</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%# <meta name="viewport" content="width=device-width"> %>
   </head>
 
   <body>
-    <%= link_to 'home', root_path%> 
-<%# this reads from the routes file to check where to point too %>
-    <%= link_to 'about', about_path%>
-    <%= link_to 'contact', contact_path%>
-    <%# the navbar is loaded here so I dont have to add it to each page individually %>
-    <%= yield %>
+    <%# nav bar %>
+    <nav class="navbar navbar-inverse navbar-toggleable-md bg-inverse">
+      <div class="container">
+        <%= link_to "one month rails", root_path, class: "navbar-brand"%>
+        <ul class="nav navbar-nav">
+          <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Contact", "#", class: "nav-link" %></li>
+        </ul>
+      </div>
+    </nav>
+
+    <%= yield%>
+
+    <footer class="small text-muted">
+      <div class="container">
+        <hr>
+        <center>
+          <p>Copyright info here</p>
+        </center>
+      </div>
+    </footer>
   </body>
 </html>
